@@ -21,7 +21,6 @@ import java.io.FileFilter;
 import java.io.FileNotFoundException;
 import java.io.FilenameFilter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -130,38 +129,35 @@ public class Directory {
       File[] listFiles = directory.listFiles(fileFilter);
       if (listFiles == null)
         throw new FileNotFoundException("Invalid directory name: '" + directory.getPath() + "'");
-      files = Collections.unmodifiableList(Arrays.asList(listFiles));
+      files = List.of(listFiles);
       File[] subdirList = directory.listFiles(DIRECTORY_FILTER);
       subdirs = new ArrayList<Directory>();
-      for (int i = 0; i < subdirList.length; i++) {
-        Directory newDir = newDirectory(subdirList[i], fileFilter);
+      for (File file : subdirList) {
+        Directory newDir = newDirectory(file, fileFilter);
         newDir.parent = this;
         subdirs.add(newDir);
       }
-      Collections.sort(
-          subdirs,
-          new Comparator<Directory>() {
-            public int compare(Directory d1, Directory d2) {
-              // Lets sort by directories first, then Hero Lab Portfolios, then finally PDF's
-              String name1 = d1.getPath().getName();
-              String name2 = d2.getPath().getName();
+      subdirs.sort(
+          (d1, d2) -> {
+            // Lets sort by directories first, then Hero Lab Portfolios, then finally PDF's
+            String name1 = d1.getPath().getName();
+            String name2 = d2.getPath().getName();
 
-              if (d1.isDir() && d2.isDir()) {
+            if (d1.isDir() && d2.isDir()) {
+              return String.CASE_INSENSITIVE_ORDER.compare(name1, name2);
+            } else if (!d1.isDir() && !d2.isDir()) {
+              if ((d1.isPDF() && d2.isPDF())
+                  || (d1.isHeroLabPortfolio() && d2.isHeroLabPortfolio())) {
                 return String.CASE_INSENSITIVE_ORDER.compare(name1, name2);
-              } else if (!d1.isDir() && !d2.isDir()) {
-                if ((d1.isPDF() && d2.isPDF())
-                    || (d1.isHeroLabPortfolio() && d2.isHeroLabPortfolio())) {
-                  return String.CASE_INSENSITIVE_ORDER.compare(name1, name2);
-                } else if (d1.isPDF()) {
-                  return 1;
-                } else {
-                  return -1;
-                }
-              } else if (d1.isDir()) {
-                return -1;
-              } else {
+              } else if (d1.isPDF()) {
                 return 1;
+              } else {
+                return -1;
               }
+            } else if (d1.isDir()) {
+              return -1;
+            } else {
+              return 1;
             }
           });
       subdirs = Collections.unmodifiableList(subdirs);
@@ -175,15 +171,9 @@ public class Directory {
     public boolean accept(File file) {
       if (file.isDirectory()) {
         return false;
-      } else {
-        String path = file.getAbsolutePath().toLowerCase();
-
-        if (path.endsWith(".por") && MAGIC_NUMBER.accept(file)) {
-          return true;
-        } else {
-          return false;
-        }
       }
+      String path = file.getAbsolutePath().toLowerCase();
+      return path.endsWith(".por") && MAGIC_NUMBER.accept(file);
     }
   }
 
@@ -211,11 +201,9 @@ public class Directory {
   }
 
   public static final Comparator<Directory> COMPARATOR =
-      new Comparator<Directory>() {
-        public int compare(Directory o1, Directory o2) {
-          String filename1 = o1.getPath().getName();
-          String filename2 = o2.getPath().getName();
-          return filename1.compareToIgnoreCase(filename2);
-        }
+      (o1, o2) -> {
+        String filename1 = o1.getPath().getName();
+        String filename2 = o2.getPath().getName();
+        return filename1.compareToIgnoreCase(filename2);
       };
 }
